--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kami-movie",
-  "version": "4.6.5",
+  "version": "4.6.6",
   "private": true,
-  "homepage": "https://github.com/Kamikaz07/Kami-Movie",
+  "homepage": "https://github.com/Kamikaz07",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
